Corrigiendo problemas de compilacion en el .tex

--- a/tp0/informe/ejemplo/tp0_original.tex
+++ b/tp0/informe/ejemplo/tp0_original.tex
@@ -1,11 +1,11 @@
 \documentclass[a4paper,10pt]{article}
 % Paquete para inclusión de gráficos.
 \usepackage{graphicx}
-% Paquete para definir el idioma usado.
-\usepackage[spanish]{babel}
 % Paquete para definir la codificación del conjunto de caracteres usado
 % (latin1 es ISO 8859-1).
 \usepackage[latin1]{inputenc}
+% Paquete para definir el idioma usado.
+\usepackage[spanish]{babel}
 \usepackage{hyperref}
 
 
@@ -13,18 +13,21 @@
 \title{	\ Trabajo Práctico Nº 0: Infraestructura Básica}
 % Información sobre los autores.
 \author{	Martinez Ariel, \textit{Padrón Nro. 88573}\\
-            \texttt{ arielcorreofiuba@gmail.com.ar }\\\\
-            Nestor Huallpa, \textit{Padrón Nro. }\\
-            \texttt{ huallpa.nestor@gmail.com }\\\\
-			Facundo Caldora, \textit{Padrón Nro. [completar] }\\
-            \texttt{ [completar] }\\\\               
-            \texttt{\footnotesize 1º Entrega: 08/09/2015}\\
+            \texttt{ lamc1986@yahoo.com.ar }\\\\
+            Ali Luis, \textit{Padrón Nro. 81151}\\
+            \texttt{ aliluis@gmail.com }\\\\
+			Dworjanyn Enrique, \textit{Padrón Nro.84253 }\\
+            \texttt{ dworja@hotmail.com }\\\\               
+            \texttt{\footnotesize 1º Entrega: 13/09/2011}\\
+	    \texttt{\footnotesize 2º Entrega: 27/09/2011}\\
+	    \texttt{\footnotesize 3º Entrega: 25/10/2011}\\\\ \\\\\\\\\\\\\\
             \\\\\\\\\\\\\\\\\\
-            \normalsize{2do. Cuatrimestre de 2015}\\ 
+            \normalsize{2do. Cuatrimestre de 2011}\\ 
             \normalsize{66.20 Organización de Computadoras} \\
             \normalsize{Facultad de Ingeniería, Universidad de Buenos Aires} \\}
        
 \date{}
+
 
 \begin{document}
 % Inserta el título.
@@ -34,8 +37,8 @@
 % Resumen
 \begin{abstract}
 En el presente trabajo práctico se describirán todos los pasos y 
-conclusiones relacionadas al desarrollo e implementación de multiplicacion de matrices de numero reales, representados
-en punto flotante de doble precisiòn.
+conclusiones relacionadas al desarrollo e implementación de algunas 
+funcionalidades del comando Tac de Unix.
 \end{abstract}
 \newpage{}
 \tableofcontents
